update image links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="MMLAIR: Multimodal learning analytics in reading">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="./images/background-main.jpg">
+    <meta property="og:image" content="images/background-main.jpg">
 
     <title>
         MMLAIR: Multimodal learning analytics in reading
@@ -149,7 +149,7 @@
         <figure class="wp-block-image aligncenter size-medium">
         <center>
 
-            <img decoding="async" loading="lazy" src="/images/MMLAP-framework.png" width="100%"> 
+            <img decoding="async" loading="lazy" src="images/mmlair.png" width="100%"> 
 
         </center>  
         </figure>  
@@ -180,7 +180,7 @@
 
                 <h3>International Journals: </h3>
                     <p class="row large text-muted">
-                        Ongoing
+                        Ongoing work
                     </p>
 
                 </div>
@@ -195,7 +195,7 @@
 
     
     <!-- Members Section -->
-    <section id="members" >
+    <!--<section id="members" class="bg-mid-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -209,7 +209,7 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <a href="https://www.let.media.kyoto-u.ac.jp/en/member/former-members/" target="_blank">
-                            <img src="./images/portrait-sample-m.jpg" style="height: 200px; width:200px;" class="img-responsive img-circle">
+                            <img src="images/portrait-sample-m.jpg" style="height: 200px; width:200px;" class="img-responsive img-circle">
                         </a>
                         <h4><a href="https://www.let.media.kyoto-u.ac.jp/en/member/former-members/" target="_blank">Member A</a></h4>
                         <p class="text-muted">AP<br> KU </p>
@@ -221,7 +221,7 @@
         </div>
 
       </div>
-    </section>
+    </section>-->
 
 
     <!-- Fundings Section -->
