--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="MMLAIR: Multimodal learning analytics in reading">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/background-main.jpg">
+    <meta property="og:image" content="images/background-main.png">
 
     <title>
         MMLAIR: Multimodal learning analytics in reading
