update title link color

--- a/index.html
+++ b/index.html
@@ -93,8 +93,12 @@
         <div class="container">
             <div class="intro-text" style="color:white;">
 
-                <br>              
-                <div class="intro-heading">MMLAIR: Multimodal Learning Analytics in Reading</div>
+                <br>  
+                <div class="intro-heading" style="color:white;">
+                    <a href="https://li-huiyong.github.io/MMLAIR/" target="_blank">
+                        MMLAIR: Multimodal Learning Analytics in Reading
+                    </a>
+                </div>
 
             </div>
         </div>
