--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="MMLAIR: Multimodal learning analytics in reading">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/background-main.png">
+    <meta property="og:image" content="images/background-default.png">
 
     <title>
         MMLAIR: Multimodal learning analytics in reading
@@ -168,7 +168,7 @@
 
 
     <!-- Publications Section -->
-    <section id="publications" class="bg-mid-gray">
+    <section id="publications">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
